--- a/client/style.css
+++ b/client/style.css
@@ -1,7 +1,50 @@
+* {
+    margin: 0;
+}
+
 body {
     background-color: ghostwhite;
 }
 
 .registrationError {
     color: orangered;
+}
+
+header {
+    -background-color: red;
+    display: flex;
+    justify-content: space-between;
+    height: 150px;
+    border-bottom: 1px solid rgb(53, 53, 53);;
+}
+
+.theSocialNetworkLogo {
+    -width: 100px;
+    height: 60px;
+    margin: 50px 0 50px 20px;
+}
+
+.profile_pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 20px;
+    border: 1px solid rgba(53, 53, 53, 0.137);
+    padding: 5px;
+}
+
+
+.profile_pic:hover {
+    cursor: pointer;
+}
+
+/* ************* APP ************* */
+.modalUploader {
+    background-color: rgba(26, 26, 26, 0.801);
+    color: white;
+    text-align: center;
+    margin: 0 25% 0 25%;
+    border-radius: 3px;
+    padding: 15px;
+    -height: 100px;
 }
