--- a/client/style.css
+++ b/client/style.css
@@ -6,18 +6,25 @@ body {
     background-color: ghostwhite;
 }
 
-.registrationError {
-    color: orangered;
-}
-
 header {
     -background-color: red;
     display: flex;
     justify-content: space-between;
     height: 150px;
-    border-bottom: 1px solid rgb(53, 53, 53);;
+    border-bottom: 1px solid rgb(53, 53, 53);
 }
 
+/* 
+**************** WELCOME **************** 
+*/
+.registrationError {
+    color: orangered;
+}
+
+/* 
+****************** APP ****************** 
+*/
+/* ----header---- */
 .theSocialNetworkLogo {
     -width: 100px;
     height: 60px;
@@ -28,23 +35,44 @@ header {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    object-fit: cover;
     margin: 20px;
-    border: 1px solid rgba(53, 53, 53, 0.137);
-    padding: 5px;
+    border: 1px solid rgba(53, 53, 53, 0.164);
+    padding: 2px;
 }
-
 
 .profile_pic:hover {
     cursor: pointer;
 }
+/* ----section(Profile(ProfilePic & BioEditor))---- */
+.profileContainer {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px;
+}
+.profile_picBigContainer {
+    text-align: center;
+    width: 250px;
+    -height: 200px;
+    background-color: rgba(242, 255, 0, 0.288);
+}
 
-/* ************* APP ************* */
+.bioEditor {
+    padding: 10px 20px 20px 20px;
+    background-color: rgba(252, 118, 0, 0.253);
+}
+/* ----section(Uploader)---- */
 .modalUploader {
+    width: 300px;
+    -position: absolute;
+    position: fixed;
+    top: 150px;
     background-color: rgba(26, 26, 26, 0.801);
     color: white;
     text-align: center;
     margin: 0 25% 0 25%;
     border-radius: 3px;
-    padding: 15px;
+    padding: 35px;
+    z-index: 1;
     -height: 100px;
 }
