--- a/client/style.css
+++ b/client/style.css
@@ -195,6 +195,11 @@ body {
     color: red;
 }
 
+/* ----section(FindPeople)---- */
+.findPeopleContainer {
+    background-color: lime;
+}
+
 /* ----section(Friends)---- */
 .wannabesContainer {
     background-color: red;
