--- a/client/style.css
+++ b/client/style.css
@@ -610,7 +610,7 @@ button {
     justify-content: space-evenly;
     margin: 20px;
     min-height: 600px;
-    max-width: 600px;
+    max-width: 900px;
     align-content: center;
 }
 
@@ -934,19 +934,36 @@ button {
     justify-content: center;
 }
 
+.cardChat {
+    position: relative;
+    -background-color: #000000d5;
+    color: whitesmoke;
+    margin: 20px;
+    border-radius: 5px;
+    max-width: 802px;
+    -min-width: 700px;
+    /* margin-left: 20%;
+    margin-right: 20%; */
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
 .chatHistoryContainer {
     overflow: scroll;
-    height: 550px;
+    height: 750px;
     width: auto;
     overflow-x: hidden;
-    -background-color: red;
+    background-color: #000000df;
     -z-index: 1;
     -position: absolute;
 }
 
+.chatTextareaContainer {
+    background-color: #000000df;
+}
+
 .chatTextareaContainer textarea:focus {
     outline: none;
-    border: 3px solid lime
+    border: 3px solid lime;
 }
 
 /* .imgNameWrap{
@@ -977,6 +994,87 @@ button {
 
 #chatTextarea {
     font-family: Dejavu Sans, monospace;
+}
+
+#chatbuttonWrap {
+    text-align: center;
+    background-color: #000000df;
+    -margin-right: 18px;
+    -border-radius: 5px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    margin-top: 0;
+}
+
+#chatbuttonWrap button {
+    font-size: 1em;
+    -margin-top: 3px;
+    margin-bottom: 5px;
+    -border: 1px solid whitesmoke;
+    box-shadow: 0 14px 28px rgba(255, 255, 255, 0.226),
+        0 10px 10px rgba(245, 245, 245, 0.226);
+}
+
+/* ----section(OnlineUsers)---- */
+
+.onlineUsersTitleWrap {
+    background-color: black;
+    border-right: 6.5px solid white;
+    -border-radius: 10px;
+    border-radius: 4px;
+    padding-left: 5px;
+}
+
+.onlineUserContainerWrap {
+    position: absolute;
+    width: 100%;
+}
+
+/* .onlineUserContainerWrap:before {
+    background-color: inherit;
+} */
+
+.onineUsersGlassOverlay {
+    border: 4px solid white;
+    border-left: 1.8px solid white;
+    border-radius: 4px;
+    padding: 10px;
+    -box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
+    -background-color: rgba(0, 0, 0, 0.909);
+    backdrop-filter: blur(5px);
+    -opacity: 0.5;
+}
+
+.onlineUserContainer {
+    display: inline-flex;
+    padding: 5px;
+    -border: 2px solid lime;
+}
+
+.onlineUserContainer > div {
+    text-align: center;
+}
+
+#onlineUserProfilePic {
+    -border: none;
+    border: 7px solid rgba(0, 255, 0, 0.774);
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+    filter: drop-shadow(8px 8px 10px rgba(0, 255, 0, 0.288));
+    animation: border-pulsate 2.45s infinite;
+}
+
+@keyframes border-pulsate {
+    0% {
+        border-color: rgba(0, 255, 0, 0.731);
+    }
+    50% {
+        border-color: rgba(0, 255, 0, 0);
+    }
+    /* 50%  { border-color: rgba(0, 255, 0, 0.233); } */
+    /* 50%  { border-color: rgba(255, 255, 255, 0.774); } */
+    100% {
+        border-color: rgba(0, 255, 0, 0.774);
+    }
 }
 
 /* ----section(Uploader)---- */
