--- a/client/style.css
+++ b/client/style.css
@@ -603,6 +603,7 @@ button {
 .sectionProfile {
     display: flex;
     justify-content: center;
+    -background-color: red;
 }
 .profileContainer {
     display: flex;
@@ -611,6 +612,7 @@ button {
     justify-content: space-evenly;
     margin: 20px;
     min-height: 600px;
+    -min-height: 8000px;
     max-width: 900px;
     align-content: center;
 }
@@ -691,6 +693,7 @@ button {
     border: 0;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
 #introTitle {
     align-self: center;
     font-size: 1.8em;
@@ -784,9 +787,33 @@ button {
     -align-content: center;
 } */
 
+.otherProfileContainer {
+    /* text-align: center;
+    display: flex;
+    -flex-direction: row-reverse;
+    -flex-direction: column;
+    -justify-content: space-between;
+    align-items: center;
+    -width: 1000px;
+    -align-self: center;
+    border: 3px solid red;
+    -padding-left: 10%; */
+
+    text-align: center;
+    padding-left: 8%;
+}
+
 #otherProfileBioeditor {
     font-size: 1.25em;
     text-align: justify;
+}
+
+.otherProfileBtnWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .sectionProfileFriendbutton {
@@ -794,6 +821,26 @@ button {
     flex-direction: column;
     align-items: center;
     -background-color: hotpink;
+}
+
+.friendButtonOtherProfWrap button {
+    color: white;
+}
+
+.friendButtonOtherProfWrap button:hover {
+    color: lime;
+}
+
+.dmWrap {
+    text-align: center;
+}
+
+.dmWrap button {
+    color: white;
+}
+
+.dmWrap button:hover {
+    color: lime;
 }
 
 /* ----section(OtherProfile(FriendButton)---- */
@@ -995,10 +1042,21 @@ button {
 
 #deleteMessageBtn {
     font-size: 0.9em;
+    margin-left: 150px;
+    border-radius: 50%;
+    padding: 5px;
+    outline: none;
 }
 
 #deleteMessageBtn:hover {
+    outline: none;
     color: red;
+    border: 3px solid red;
+    -background-color: red;
+}
+
+#deleteMessageBtn:active {
+    border: 3px solid lime;
 }
 
 #chatTextarea {
@@ -1024,6 +1082,10 @@ button {
         0 10px 10px rgba(245, 245, 245, 0.226);
 }
 
+#chatbuttonWrap button:hover {
+    color: lime;
+}
+
 /* ----section(OnlineUsers)---- */
 
 .onlineUsersTitleWrap {
@@ -1043,7 +1105,7 @@ button {
     background-color: inherit;
 } */
 
-.onineUsersGlassOverlay {
+.onlineUsersGlassOverlay {
     border: 4px solid white;
     border-left: 1.8px solid white;
     border-radius: 4px;
@@ -1084,6 +1146,229 @@ button {
     100% {
         border-color: rgba(0, 255, 0, 0.774);
     }
+}
+
+/* ----section(Wall)---- */
+
+/* #noPostsYet {
+    color: red;
+    z-index: 2;
+    position: absolute;
+} */
+
+.wallOuterContainer {
+    -background-color: red;
+}
+
+.wallWrapper {
+    -margin-top: 500px;
+    display: flex;
+    justify-content: center;
+    -height: auto;
+    -align-items: center;
+}
+
+.wallContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+    -background-color: lime;
+}
+
+.cardWallWrapper {
+    margin-top: 95px;
+    background-color: black;
+    width: 100vw;
+    z-index: 1;
+    -border: 10px solid blue;
+}
+
+.cardWallWrapperZindex {
+    -background-color: red;
+    background: rgba(51, 51, 51, 0.199);
+    margin-top: 5%;
+}
+
+/* .cardWallContainer {
+    margin-left: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0 30px 0 30px;
+    -grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    justify-content: space-around;
+    grid-gap: 50px;
+    align-self: center;
+    border: 10px solid red;
+} */
+
+.cardWall {
+    position: relative;
+    -background-color: #000000d5;
+    color: whitesmoke;
+    margin: 20px;
+    border-radius: 5px;
+    max-width: 70vw;
+    min-width: 700px;
+    -moz-animation-direction: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 0 20px white, 0 0 5px white;
+    -border: 10px solid yellow;
+}
+
+.wallHistoryContainerHidden {
+    height: 90px;
+    width: 70vw;
+    margin-bottom: 5%;
+}
+
+.wallHistoryContainer {
+    -overflow-x: hidden;
+    overflow: auto;
+    -height: 750px;
+    -height: auto;
+    height: 90vh;
+    width: 70vw;
+    -width: 750px;
+    overflow-x: hidden;
+    background-color: #000000df;
+    -z-index: 1;
+    -position: absolute;
+    -border: 4px solid white;
+    -border: 4px solid lime;
+    margin-bottom: 5%;
+    -margin-top: 1%;
+    border-radius: 15px;
+}
+
+.wallHistoryContainer::-webkit-scrollbar {
+    display: none;
+    -overflow-x: hidden;
+}
+
+/* .wallHistoryContainer::-webkit-scrollbar :hover :active :focus {
+    -visibility: visible;
+    -overflow-x: scroll;
+    overflow-x: visible;
+} */
+
+/* .wallHistoryContainer:hover {
+    visibility: visible;
+    overflow-x: scroll;
+} */
+
+/* .wallPostsGlassOverlayWrap {
+    position: absolute;
+    width: 100%;
+} */
+
+.wallPostsGlassOverlayWrap {
+    position: absolute;
+    width: 100%;
+}
+
+.wallPostsGlassOverlay {
+    border: 3px solid white;
+    border-left: 1.8px solid white;
+    border-right: 1.8px solid white;
+    border-radius: 4px;
+    padding: 10px;
+    box-shadow: 0 0 10px white, 0 0 5px white;
+    -background-color: rgba(255, 255, 255, 0.151);
+    backdrop-filter: blur(5px);
+    -opacity: 0.5;
+}
+
+.wallPostsGlassOverlay > div {
+    -text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 70px;
+    align-items: center;
+}
+
+.wallPostsGlassOverlay > div > p {
+    font-size: 1.3em;
+}
+
+#wallForm {
+    -background-color: black;
+    color: white;
+    font-family: Dejavu Sans, monospace;
+}
+
+#inputTitle {
+    width: 200px;
+    margin-right: 30px;
+    font-family: Dejavu Sans, monospace;
+}
+
+#inputTitle:focus {
+    outline: none;
+    border: 3px solid lime;
+}
+
+#postWallBtn {
+    font-size: 1em;
+}
+
+#postWallBtn:hover {
+    color: lime;
+}
+
+#postWallBtn:focus {
+    outline: none;
+    border: 1px solid white;
+}
+
+.wallPostsPicContainer {
+    text-align: center;
+    -width: 250px;
+    -height: 200px;
+    -background-color: rgba(242, 255, 0, 0.288);
+}
+
+.wallPostsPicContainer img {
+    margin-top: 85px;
+    height: auto;
+    width: 40vw;
+    -margin-left: 15px;
+    -object-fit: scale-down;
+    -object-fit: contain;
+    border-radius: 5px;
+    -border-top-left-radius: 5px;
+    -border-top-right-radius: 5px;
+    border: 0;
+    -box-shadow: 0 0 25px rgba(255, 255, 255, 0.301),
+        0 0 20px rgba(255, 255, 255, 0.301);
+}
+
+#titleTimestampWrap {
+    -text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 90px;
+    align-items: center;
+
+    border-bottom: 1px solid rgba(255, 255, 255, 0.521);
+    margin-right: 10%;
+    margin-left: 10%;
+    margin-bottom: 5%;
+    -background: rgba(51, 51, 51, 0.176);
+}
+
+#titleTimestampWrap > p {
+    text-align: center;
+}
+
+#titleTimestampWrap > p > b > p {
+    margin-bottom: 15px;
 }
 
 /* ----section(Uploader)---- */
